Fixed text color in dark mode for WCAG AAA compliance

--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -19,7 +19,7 @@ $light-border-color: #ddd;
 // dark mode colors
 $dark-bg-color: #2f333b;
 $dark-header-bg-color: #22262f;
-$dark-text-color: #c3bcc8;
+$dark-text-color: #c7c1cd;
 $dark-heading-color: #fff;
 $dark-link-color: #fcb117;
 $dark-link-hover-color: #fcc454;
